--- a/splendor_cards.ipynb
+++ b/splendor_cards.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -168,124 +168,124 @@
        "      <th>Green Reward</th>\n",
        "      <th>Red Reward</th>\n",
        "      <th>Black Reward</th>\n",
-       "      <th>/Pierre</th>\n",
+       "      <th>Total Cost</th>\n",
        "      <th>/PV</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>I</td>\n",
+       "      <th>94</th>\n",
+       "      <td>Noble</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Noble</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Noble</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Noble</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>I</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <th>98</th>\n",
+       "      <td>Noble</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>I</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>I</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>-</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>I</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2.7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Level  White Cost  Blue Cost  Green Cost  Red Cost  Black Cost   PV  \\\n",
-       "0     I         0.0        3.0         0.0       0.0         0.0  0.0   \n",
-       "1     I         0.0        0.0         0.0       2.0         1.0  0.0   \n",
-       "2     I         0.0        1.0         1.0       1.0         1.0  0.0   \n",
-       "3     I         0.0        2.0         0.0       0.0         2.0  0.0   \n",
-       "4     I         0.0        0.0         4.0       0.0         0.0  1.0   \n",
+       "    Level  White Cost  Blue Cost  Green Cost  Red Cost  Black Cost   PV  \\\n",
+       "94  Noble         0.0        0.0         0.0       4.0         4.0  3.0   \n",
+       "95  Noble         4.0        0.0         0.0       0.0         4.0  3.0   \n",
+       "96  Noble         3.0        3.0         3.0       0.0         0.0  3.0   \n",
+       "97  Noble         0.0        0.0         3.0       3.0         3.0  3.0   \n",
+       "98  Noble         4.0        4.0         0.0       0.0         0.0  3.0   \n",
        "\n",
-       "   White Reward  Blue Reward  Green Reward  Red Reward  Black Reward  /Pierre  \\\n",
-       "0           1.0          0.0           0.0         0.0           0.0      3.0   \n",
-       "1           1.0          0.0           0.0         0.0           0.0      3.0   \n",
-       "2           1.0          0.0           0.0         0.0           0.0      4.0   \n",
-       "3           1.0          0.0           0.0         0.0           0.0      4.0   \n",
-       "4           1.0          0.0           0.0         0.0           0.0      4.0   \n",
+       "    White Reward  Blue Reward  Green Reward  Red Reward  Black Reward  \\\n",
+       "94           0.0          0.0           0.0         0.0           0.0   \n",
+       "95           0.0          0.0           0.0         0.0           0.0   \n",
+       "96           0.0          0.0           0.0         0.0           0.0   \n",
+       "97           0.0          0.0           0.0         0.0           0.0   \n",
+       "98           0.0          0.0           0.0         0.0           0.0   \n",
        "\n",
-       "  /PV  \n",
-       "0   -  \n",
-       "1   -  \n",
-       "2   -  \n",
-       "3   -  \n",
-       "4   4  "
+       "    Total Cost  /PV  \n",
+       "94         0.0  2.7  \n",
+       "95         0.0  2.7  \n",
+       "96         0.0  3.0  \n",
+       "97         0.0  3.0  \n",
+       "98         0.0  2.7  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "      <th>Green Reward</th>\n",
        "      <th>Red Reward</th>\n",
        "      <th>Black Reward</th>\n",
-       "      <th>/Pierre</th>\n",
+       "      <th>Total Cost</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -484,24 +484,200 @@
        "75%        0.000000     0.000000      0.000000    0.000000      0.000000   \n",
        "max        1.000000     1.000000      1.000000    1.000000      1.000000   \n",
        "\n",
-       "         /Pierre  \n",
-       "count  99.000000  \n",
-       "mean    5.818182  \n",
-       "std     3.432627  \n",
-       "min     0.000000  \n",
-       "25%     4.000000  \n",
-       "50%     5.000000  \n",
-       "75%     7.000000  \n",
-       "max    14.000000  "
+       "       Total Cost  \n",
+       "count   99.000000  \n",
+       "mean     5.818182  \n",
+       "std      3.432627  \n",
+       "min      0.000000  \n",
+       "25%      4.000000  \n",
+       "50%      5.000000  \n",
+       "75%      7.000000  \n",
+       "max     14.000000  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Level</th>\n",
+       "      <th>White Cost</th>\n",
+       "      <th>Blue Cost</th>\n",
+       "      <th>Green Cost</th>\n",
+       "      <th>Red Cost</th>\n",
+       "      <th>Black Cost</th>\n",
+       "      <th>PV</th>\n",
+       "      <th>White Reward</th>\n",
+       "      <th>Blue Reward</th>\n",
+       "      <th>Green Reward</th>\n",
+       "      <th>Red Reward</th>\n",
+       "      <th>Black Reward</th>\n",
+       "      <th>Total Cost</th>\n",
+       "      <th>/PV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>Noble</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>Noble</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>Noble</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>Noble</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>Noble</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Level  White Cost  Blue Cost  Green Cost  Red Cost  Black Cost   PV  \\\n",
+       "89  Noble         3.0        3.0         0.0       0.0         3.0  3.0   \n",
+       "90  Noble         0.0        3.0         3.0       3.0         0.0  3.0   \n",
+       "91  Noble         3.0        0.0         0.0       3.0         3.0  3.0   \n",
+       "92  Noble         0.0        0.0         4.0       4.0         0.0  3.0   \n",
+       "93  Noble         0.0        4.0         4.0       0.0         0.0  3.0   \n",
+       "\n",
+       "    White Reward  Blue Reward  Green Reward  Red Reward  Black Reward  \\\n",
+       "89           0.0          0.0           0.0         0.0           0.0   \n",
+       "90           0.0          0.0           0.0         0.0           0.0   \n",
+       "91           0.0          0.0           0.0         0.0           0.0   \n",
+       "92           0.0          0.0           0.0         0.0           0.0   \n",
+       "93           0.0          0.0           0.0         0.0           0.0   \n",
+       "\n",
+       "    Total Cost  /PV  \n",
+       "89         0.0  3.0  \n",
+       "90         0.0  3.0  \n",
+       "91         0.0  3.0  \n",
+       "92         0.0  2.7  \n",
+       "93         0.0  2.7  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nobles = data[data['Level']== 'Noble']\n",
+    "nobles.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thoughts\n",
+    "\n",
+    "So now we need to think about actually playing the game.\n",
+    "We need to simulate the game loop, and then train a bot to play the game. Right now all we have are the cards. What is the best way to simulate the game?\n"
    ]
   }
  ],
